[package]
name = "stanlib"
version = "0.1.0"
authors = ["Daniel Lockyer <thisisdaniellockyer@gmail.com>"]
build = "build.rs"

[lib]
crate-type = ["dylib"]
plugin = true

[dependencies]
z3 = "0.2.0"
lalrpop = "0.12.0"

[dependencies.lalrpop-util]
version = "0.12.0"

[build-dependencies.lalrpop]
version = "0.12.0"